<resources>
    <string name="app_name">Tutorial5_VandanaAnand</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Tutorial 5</string>
    <string name="goCheckOut_btn">Check Out</string>
    <string name="goDoQuery_btn">Do Query</string>
    <string name="title_query">Query</string>
    <string name="query_prompt">Choose a Query</string>
    <string name="showresult_btn">Show Result</string>
    <string name="goback_btn">Back to Main Page</string>
</resources>
