<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:isScrollContainer="true"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/title_query"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/querylist_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:dropDownWidth="270dp"
        android:dropDownSelector="@android:drawable/spinner_background"
        android:entries="@array/query_array"
        android:gravity="center_horizontal"
        android:prompt="@string/query_prompt" />

    <Button
        android:id="@+id/showresult_btn"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_gravity="right|center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="69dp"
        android:text="@string/showresult_btn"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollview_queryresults"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:keepScreenOn="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/goback_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/goback_btn"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>
